[package]
name = "raydium_swap"
version = "0.1.0"
edition = "2021"



[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json", "socks", "native-tls","multipart"] }
serde = "1.0.217"
serde_json = "1.0.135"
solana-client = "2.1.8"
solana-sdk = "2.1.8"
solana-transaction-status-client-types = "2.1.7"
tokio = { version = "1.43.0", features = ["full","time"] }
tracing = "0.1.40"
spl-token-client = "0.13.0"
solana-account-decoder = "2.1.8"
spl-token = "7.0.0"
futures-util = "0.3.31"
arrayref = "0.3.9"
bytemuck = "1.21.0"
spl-associated-token-account = "6.0.0"
borsh = "1.5.4"
teloxide = "0.13.0"
byteorder = "1.5.0"
bs64 = "0.1.2"
twitter-v2 = "0.1.8"
time = "0.3.37"
jito-sdk-rust = "0.1.0" 
regex = "1.11.1"
